--- a/src/components/share.css
+++ b/src/components/share.css
@@ -1,4 +1,4 @@
-@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css);
 
 @-webkit-keyframes wiggle {
   0% {
@@ -20,22 +20,17 @@
   -o-box-sizing: border-box;
 }
 
-.wrap {
-  width: 35%;
-  margin: 100px auto;
-  text-align: center;
-}
 
 .social {
   font-size: 2.5em;
-  height: 50px;
+  height: 40px;
   overflow: hidden;
-  border-bottom: 1px solid #abc;
+  border-bottom: 1px solid #64ffda;
 }
 
 i {
   position: relative;
-  top: 30px;
+  top: 20px;
   margin: 0 10px;
   transition: all 100ms cubic-bezier(0.42, 0, 0.58, 1);
   /* ease-in-out */
